# TagLab

./: .gitignore  2013.csv  GENET.csv  LabelLab.py  README.md  TAGLAB_VERSION  TagLab.py  all.py  arbolla.json  arc  batch_processing.py  bi.csv  blobtest.json  bu.tif  classes.dot  clip.tif  config.json  dependencies.md  genetnew.csv  geo.tif  go.tif  haw2016-30.json  install.py  install_conda_windows.py  join_slices2.py  join_tiles.py  large  prepareRITMdataset.py  prova.dbf  prova.json  prova_coralli.json  prova_coralli2.json  provamat.csv  provaprovosa.dbf  provaprovosa.prj  provaprovosa.shp  provaprovosa.shx  provapunti.json  remove_nodata_tiles.py  reproject.json  (+7 more)
.github/workflows/: CreateRelease.yml
.ideabck/: workspace.xml
coraline/: CMakeLists.txt  Coraline.py  coraline.pro  coralinelib.sh
coraline/src/: coraline.cpp  coraline.h  coralinepy.cpp  main.cpp  maxflow.cpp  maxflow.h  mutualedges.cpp  mutualedges.h
coraline/src/maxflow/: CMakeLists.txt  block.h  graph.cpp  graph.h
dictionaries/: masonry.json  scripps.json
docs/: TagLab.html
icons/: icons.psd
models/: aspp.py  coral_dataset.py  decoder.py  deeplab.py  deeplab_resnet.py  losses.py  provafunzionamento-test-metrics.txt  provafunzionamento-val-metrics.txt  training.py
models/backbone/: __init__.py  resnet.py
models/dataloaders/: custom_transforms.py  helpers.py  pascal.py  sbd.py
projects/: sample_project.json
sample/: README.txt
sampleProjects/: README.txt  align-test.json  city_wall_sample.json  dem_project.json  multi-temporal_comparison_project.json  small_annotated_area_project.json
source/: Annotation.py  Assign.py  Blob.py  Channel.py  Configuration.py  ConversionUtils.py  Correspondances.py  Correspondences.py  CreateCrack.py  CustomData.py  Cut.py  DeepExtreme.py  EditBorder.py  EditPoints.py  Freehand.py  Genet.py  GeoRef.py  Grid.py  Image.py  Label.py  Labels.py  MapClassifier.py  Mask.py  NewDataset.py  PickPoints.py  Point.py  Project.py  QtAlignmentToolWidget.py  QtBricksWidget.py  QtClassifierWidget.py  QtComparePanel.py  QtCoralNetToolboxWidget.py  QtCourseAnalysis.py  QtCrackWidget.py  QtCropWidget.py  QtCustomDataWidget.py  QtDXFExport.py  QtDatasetManagerWidget.py  QtDictionaryWidget.py  QtExportAnnAsTable.py  (+54 more)
source/tools/: Assign.py  BricksSegmentation.py  BrushTool.py  CorrectivePoints.py  CreateCrack.py  Cut.py  DeepExtreme.py  EditBorder.py  EditPoints.py  FourClicks.py  Freehand.py  Match.py  PickPoints.py  PlaceAnnPoint.py  Ritm.py  Rows.py  Sam.py  (+15 more)
(+27 files in other folders)
